# zero-postgres

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  postgresql-client-architecture.html  postgresql-wire-protocol.html  shell.nix  test_psycopg_pipeline.py
.github/workflows/: ci.yml  release-plz.yml
examples/: async_connection.rs  async_tls.rs  bench_postgres.rs  bench_tokio_postgres.rs  bench_zero_async.rs  bench_zero_sync.rs  connection.rs  extended_data_types.rs  pipeline.rs  pipeline_batch.rs  prepare_batch.rs  simple_data_types.rs  sync_tls.rs
src/: buffer_pool.rs  buffer_set.rs  error.rs  handler.rs  lib.rs  opts.rs  pipeline.rs  row.rs  statement.rs  value.rs
src/conversion/: bytes.rs  chrono.rs  decimal.rs  mod.rs  numeric_util.rs  primitives.rs  row.rs  string.rs  time.rs  uuid.rs
src/protocol/: codec.rs  copy.rs  mod.rs  types.rs
src/protocol/backend/: auth.rs  copy.rs  error.rs  extended.rs  mod.rs  query.rs
src/protocol/frontend/: auth.rs  copy.rs  extended.rs  mod.rs  simple.rs  startup.rs
src/state/: action.rs  batch_prepare.rs  connection.rs  extended.rs  mod.rs  simple_query.rs
src/sync/: conn.rs  mod.rs  named_portal.rs  pipeline.rs  pool.rs  stream.rs  transaction.rs  unnamed_portal.rs
src/sync/pipeline/: handles.rs  mod.rs
src/tokio/: conn.rs  mod.rs  named_portal.rs  pool.rs  stream.rs  transaction.rs  unnamed_portal.rs
src/tokio/pipeline/: handles.rs  mod.rs
src/types/: bytes.rs  decimal.rs  mod.rs  primitives.rs  string.rs  uuid.rs
tests/: exec_batch.rs  exec_iter.rs  exec_portal.rs  pipeline.rs  portal_behavior.rs
