[package]
name = "zero-postgres"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A high-performance PostgreSQL client"
repository = "https://github.com/elbaro/zero-postgres"
keywords = ["postgres", "postgresql", "database", "sql", "async"]
categories = ["database"]

[features]
default = ["sync", "tokio"]
sync = []
tokio = ["dep:tokio"]
sync-tls = ["dep:native-tls"]
tokio-tls = ["dep:native-tls", "dep:tokio-native-tls"]
with-uuid = ["dep:uuid"]
with-time = ["dep:time"]
with-chrono = ["dep:chrono"]
with-rust-decimal = ["dep:rust_decimal"]
lowlevel = []

[dependencies]
thiserror = "2"
tokio = { version = "1", features = [
  "io-util",
  "net",
  "rt",
  "sync",
], optional = true }
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
zerocopy = { version = "0.8", features = ["derive"] }
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }
base64 = "0.22"
md-5 = "0.10"
rand = "0.9"
tracing = { version = "0.1", features = ["release_max_level_warn"] }
memchr = "2"
simdutf8 = "0.1"
url = "2"
crossbeam-queue = "0.3"
std-semaphore = "0.1"
uuid = { version = "1", optional = true }
time = { version = "0.3", features = ["macros", "parsing"], optional = true }
chrono = { version = "0.4", optional = true, default-features = false, features = [
  "std",
  "clock",
] }
rust_decimal = { version = "1", optional = true }
no-panic = "0.1.35"
log = "0.4.29"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tokio-postgres = "0.7"
postgres = "0.19"

[lints.clippy]
all = { level = "deny", priority = -1 }
alloc_instead_of_core = "warn"
allow_attributes = "warn"
as_pointer_underscore = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
cfg_not_test = "warn"
clone_on_ref_ptr = "warn"
cognitive_complexity = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
disallowed_script_idents = "warn"
doc_include_without_cfg = "warn"
else_if_without_else = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
expect_used = "warn"
field_scoped_visibility_modifiers = "warn"
filetype_is_file = "warn"
float_arithmetic = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
infinite_loop = "warn"
inline_asm_x86_att_syntax = "warn"
inline_asm_x86_intel_syntax = "warn"
integer_division = "warn"
integer_division_remainder_used = "warn"
iter_over_hash_type = "warn"
large_include_file = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "warn"
missing_asserts_for_indexing = "warn"
mixed_read_write_in_expression = "warn"
modulo_arithmetic = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_ascii_literal = "warn"
non_zero_suggestions = "warn"
panic = "warn"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
pathbuf_init_then_push = "warn"
pointer_format = "warn"
precedence_bits = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_with_shorthand = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unreachable = "warn"
unused_result_ok = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_debug = "warn"
verbose_file_reads = "warn"
